CMP-419 Add URIConverter.